Small style change to prevent x axis overflow

--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ body {
 body {
     background: var(--bg-gradient);
     transition: background 0.5s ease;
+    overflow-x: hidden;
+    width: 100%; 
 }
 
 html {
